test_regress/t/t_cover_fsm_if_unknown_enum_multi_bad.out
%Warning-COVERIGN: t/t_cover_fsm_if_unknown_enum_multi_bad.v:23:19: Ignoring unsupported: FSM coverage on enum state transitions that assign a constant not present in the declared enum
   23 |       S0: state_d = sel ? 2'd3 : S1;
      |                   ^
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_cover_fsm_if_unknown_enum_multi_bad.v:50:19: Ignoring unsupported: FSM coverage on enum state transitions that assign a constant not present in the declared enum
   50 |       S0: state_d = sel ? S1 : 2'd3;
      |                   ^
%Error: Exiting due to
